1.18-4.0.0:
- Port to 1.18.2. Thanks to Mrbysco

1.16-3.0.3:
- Update to latest McJtyLib

1.16-3.0.2-beta:
- Update to latest McJtyLib

3.0.1-beta:
- Fixed a problem on servers

3.0.0-beta:
- First port to 1.16.2!

2.0.0-beta:
- First port to 1.15.2!

1.3.10:
- Updates to the latest McJtyLib

1.3.9:
- Updates to the latest McJtyLib

1.3.8:
- Updates to the latest McJtyLib

1.3.7:
- Better recipe for glass boots (uses tags for glass)
- Proper loot tables for the blocks

1.3.3:
- Update to latest Forge

1.3.2:
- Update to 1.14.4

1.3.0:
- Depends on McJtyLib 3.5.0!

1.2.1:
- WARNING: Do not load any worlds with Restrictions 1.2.0 or earlier if you last saved them with Restrictions 1.2.1 or later!
- Joseph fixed log warnings due to tile entities being registered with names like "minecraft:restrictions_pusher" instead of "restrictions:pusher".
- Joseph fixed fall damage accumulating indefinitely while hovering (#11)

1.2.0:
- Made compatible with the latest McJtyLib (3.0.0)

1.2.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)